# FirstDX12Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  D3D12FirstWindow.sln  LICENSE  README.md  launch.vs.json
Engine/: Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  pch.h
Engine/Platform/DX12/: d3dx12.h
Part1/: CMakeLists.txt
Part1/Source/: Engine.cpp  Helpers.h  Part1.cpp  pch.cpp  pch.h
Part2/: CMakeLists.txt
Part2/Source/: Part2.cpp  Part2.h
Part2/shaders/: PixelShader.cso  PixelShader.hlsl
Part3/: CMakeLists.txt
Part3/Source/: Part3.cpp  Part3.h
Part3/shaders/: PixelShader.cso  PixelShader.hlsl  VertexShader.cso  VertexShader.hlsl
Part4/: CMakeLists.txt
Part4/Content/: CubeMap.dds
Part4/Source/: Part4.cpp  Part4.h
Part4/shaders/: GenerateCubeMips_CS.cso  GenerateCubeMips_CS.hlsl  PixelShader.cso  PixelShader.hlsl  VertexShader.cso  VertexShader.hlsl
cmake/: FindD3D12.cmake
lib/: CMakeLists.txt
lib/3DGEP/: CMakeLists.txt
lib/3DGEP/Source/: Application.cpp  D3D12CommandQueue.cpp  D3D12GEPUtils.cpp  D3D12UtilsInternal.h  D3D12Window.cpp  GEPUtilsGeometry.cpp  GepPCH.h
lib/3DGEP/Source/Graphics/: CommandList.cpp  CommandQueue.cpp  Device.cpp  GraphicsAllocator.cpp  GraphicsAllocator.h  GraphicsUtils.cpp  PipelineState.cpp  RangeAllocators.cpp  Window.cpp
lib/3DGEP/Source/Graphics/D3D12/: D3D12BufferAllocator.cpp  D3D12BufferAllocator.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12CommandQueue.cpp  D3D12DescAllocator.cpp  D3D12DescAllocator.h  D3D12DescAllocatorPage.cpp  D3D12DescAllocatorPage.h  D3D12DescHeapAllocators.cpp  D3D12DescHeapAllocators.h  D3D12DescHeapFactory.cpp  D3D12DescHeapFactory.h  D3D12Device.cpp  D3D12Device.h  D3D12DynamicDescHeap.cpp  D3D12DynamicDescHeap.h  D3D12GEPUtils.cpp  D3D12GpuDescHeap.cpp  D3D12GpuDescHeap.h  D3D12GraphicsAllocator.cpp  D3D12GraphicsAllocator.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12UtilsInternal.cpp  D3D12UtilsInternal.h  D3D12Window.cpp  GEPUtilsGeometry.cpp
lib/3DGEP/Source/Graphics/Public/: CommandList.h  CommandQueue.h  D3D12CommandQueue.h  D3D12GEPUtils.h  D3D12Window.h  Device.h  GraphicsAllocator.h  GraphicsTypes.h  GraphicsUtils.h  PipelineState.h  RangeAllocators.h  Window.h
lib/3DGEP/Source/Public/: Application.h  D3D12CommandQueue.h  D3D12GEPUtils.h  D3D12Window.h  Delegate.h  GEPUtils.h  GEPUtilsGeometry.h  GEPUtilsMath.h
lib/DX12/: CMakeLists.txt
lib/DX12/Include/: d3dx12.h
